--- a/admin-movieproject/src/pages/Main/Movie/Form/Form.css
+++ b/admin-movieproject/src/pages/Main/Movie/Form/Form.css
@@ -208,7 +208,6 @@ button:hover {
   border-radius: 5px;
 }
 
-/* Style the tabs container */
 .tabs {
   list-style-type: none;
   display: flex;
@@ -217,7 +216,6 @@ button:hover {
   margin: 0;
 }
 
-/* Style each tab */
 .tabs li {
   padding: 10px;
   cursor: pointer;
@@ -225,17 +223,15 @@ button:hover {
   border: 1px solid #ddd;
   border-radius: 5px;
   font-size: 1rem;
-  color: black;  /* Set font color to black */
+  color: black;  
   transition: background-color 0.3s, color 0.3s;
 }
 
-/* Change tab color when it's active */
 .tabs li.active {
   background-color: #007bff;
-  color: white;  /* Active tab text color becomes white */
+  color: white;  
 }
 
-/* Hover effect for tabs */
 .tabs li:hover {
   background-color: #e6f7ff;
 }
