--- a/client-movieproject/src/components/MovieCards/MovieCards.css
+++ b/client-movieproject/src/components/MovieCards/MovieCards.css
@@ -1,14 +1,68 @@
 .card {
-  max-width: 180px;
-  border: 20px solid #898989;
-  background-color: #898989;
-}
-.card img {
-  max-width: 180px;
-  object-fit: contain;
+  position: relative;
+  width: 190px;
+  height: 254px;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding: 12px;
+  gap: 12px;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.card:hover {
-  border: 20px solid #3f3f3f;
-  background-color: #3f3f3f;
+.card img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  left: -5px;
+  margin: auto;
+  width: 200px;
+  height: 264px;
+  border-radius: 10px;
+  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
+  z-index: -10;
+  pointer-events: none;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.card::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+  transform: translate3d(0, 0, 0) scale(0.95);
+  filter: blur(20px);
+}
+
+.heading {
+  position: absolute;
+  bottom: 12px;
+  left: 12px;
+  font-size: 16px;
+  color: white;
+  text-transform: capitalize;
+  font-weight: 700;
+  z-index: 1;
+  margin: 0;
+}
+
+.card:hover::after {
+  filter: blur(30px);
+}
+
+.card:hover::before {
+  transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
 }
